--- a/templates/base_nosidebar.html
+++ b/templates/base_nosidebar.html
@@ -47,9 +47,7 @@
         
     </div>
     
-    <div id="main">
-        <div id="sidebar">{% block sidebar %}{% endblock %}</div>
-        
+    <div id="main" class="nosidebar">
         <div id="content">
             <div id="content_header">
               <h2>{% block content_header %}{% endblock %}</h2>
