--- a/media/css/basecamp.css
+++ b/media/css/basecamp.css
@@ -22,7 +22,7 @@ a:hover, a:active { color: #2A5685; }
 #top-menu li a { color: #999; font-weight: normal; padding:4px 5px; }
 #top-menu li a:hover { color: #fff; text-decoration: none; }
 #main { background: #EEEEEE; margin: 8px 24px 0px 24px; }
-#content, #main.nosidebar #content { background: #fff; border-right: 1px solid #bbb; border-bottom: 1px solid #bbb; overflow: auto; -moz-box-shadow: #bbb 1px 1px 2px; -webkit-box-shadow: 1px 1px 2px #bbb; }
+#content, #main.nosidebar #content { margin-bottom: 20px; background: #fff; border-right: 1px solid #bbb; border-bottom: 1px solid #bbb; overflow: auto; -moz-box-shadow: #bbb 1px 1px 2px; -webkit-box-shadow: 1px 1px 2px #bbb; }
 #content { width: 80%; }
 #main.nosidebar #content { width: auto; }
 #sidebar { width: 16%; }
@@ -33,19 +33,11 @@ a:hover, a:active { color: #2A5685; }
 /* Headers */
 h1, h2, h3, h4 { font-family: "Lucida Grande",arial,sans-serif; }
 h1 { font-size: 24px; font-weight: normal; margin:0pt 0pt 0pt 0.25em; padding:0pt 0pt 10px; text-align:left; }
-h2, h3, h4, .wiki h1, .wiki h2, .wiki h3 { border-bottom: 0px;}
-
-h2, .wiki h1 { background-color: #edf3fe; margin: -6px -10px 10px; padding: 10px 20px; font-size: 14px; color: #000; }
-.wiki h1 { font-family:"Trebuchet MS",Verdana,sans-serif; font-weight: bold;}
-.wiki h2 { background-color: transparent; }
-div.issue div.wiki h3 { text-decoration: underline; }
-
+h2 { background-color: #edf3fe; margin: -6px -10px 10px; padding: 10px 20px; font-size: 14px; color: #000; }
+h2, h3, h4 { border-bottom: 0px;}
 h3, h4 { font-weight: normal; }
-div.wiki h3, div.wiki h4 { font-weight: bold; }
 
 #sidebar h3 { border-bottom:1px solid #DCDCDC; padding:6px 8px; }
-
-div.journal h4 { background-color: #EDF3FE; border-left: 3px solid #9FBFFA; padding: 10px;}
 
 div.splitcontentleft h2 { background-color: transparent; padding: 0; margin: 20px 0 5px 0; }
 
@@ -61,15 +53,15 @@ div.splitcontentleft h2 { background-color: transparent; padding: 0; margin: 20p
 
 /* Tables */
 table.list { border: none; margin-top:10px; }
-table.list th { background-color: #fff; }
-table.list tbody td, table.list tbody tr td { border-bottom: solid 1px #ddd; font-size: 11px; padding:4px 10px 4px 3px; }
+table.list th { background-color: #e4f0ff; }
+table.list tbody td, table.list tbody tr td { border-bottom: solid 1px #ddd; padding: 3px; }
 table.list thead th {
 	border: none;
 	border-bottom:1px solid #999999;
+	border-top:1px solid #999999;
 	text-align: left;
-/*  font-size:9px;*/
 	font-weight:normal;
-	padding:0pt 3px 3px;
+    padding: 5px;
 	text-transform:uppercase;
 }
 
@@ -116,14 +108,6 @@ p.breadcrumb {
 	text-indent:15px;
 }
 
-/* Fields */
-input[type="text"], input[type="password"], textarea, select { padding: 2px; border: 1px solid #d7d7d7; }
-input[type="text"], input[type="password"] { padding: 3px; }
-input[type="text"]:focus, input[type="password"]:focus, textarea:focus, select:focus { border: 1px solid #888866; }
-option { border-bottom: 1px dotted #d7d7d7; }
-input#issue_subject { font-size: 200%; width: 90%; }
-
-textarea.wiki-edit { font-family: Cambria, Verdana, Serif; font-size: larger; }
 
 /* Misc */
 .box { background-color: #fcfcfc; }
@@ -132,8 +116,6 @@ textarea.wiki-edit { font-family: Cambria, Verdana, Serif; font-size: larger; }
 
 hr { background:#eee none repeat scroll 0% 0%; }
 
-div.issue { background: #FFFFEC; }
 div.splitcontentleft ol li, div.splitcontentleft ul li, div.wiki ol li, div.wiki ul li { padding: 4px 0; }
-div.wiki ul.toc li { padding: 0; }
 ol li ol li { list-style-type: lower-alpha; }
 ol li ol li ol li { list-style-type: lower-roman; }
