--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -12,23 +12,25 @@
 </head>
 
 <body>
+
+<div id="login-messages">
+  {% if messages %}
+  <ul class="messages">
+      {% for message in messages %}
+          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+      {% endfor %}
+  </ul>
+  {% endif %}
+  {{ form.non_field_errors }}
+</div>
+
 <div id="header">
     <h1>LBCMCP - Gestion des commandes</h1>
 </div>
 
 <div id="wrapper">
     <div id="login">
-        {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-
-        {{ form.non_field_errors }}
         <form method="post" action="{% url django.contrib.auth.views.login %}" name="login">{% csrf_token %}
-
             <label for="username">Identifiant</label><br />
             {{ form.username }}<br />
             <label for="password">Mot de passe</label><br />
