--- a/templates/order/index.html
+++ b/templates/order/index.html
@@ -22,6 +22,7 @@
       <th>Produits</th>
       <th>Commande passée par</th>
       <th>Commande passée le</th>
+      <th>dernière modification</th>
       <th>Statut</th>
   </thead>
   
@@ -32,7 +33,8 @@
             <td>{{ order.products.all|join:", " }}</td>
             <td>{{ order.user.username }}</td>
             <td>{{ order.date_created }}</td>
-            <td>{{ order.state }}</td>
+            <td>{{ order.last_change }}</td>
+            <td>{{ order.get_state_display }}</td>
         </tr>
       {% endfor %}
   </tbody>
