--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,5 @@
-{% extends "base_custom_content.html" %}
+{% extends "main_custom.html" %}
 
-{% block title %} - Accueil{% endblock %}
 {% block menu_home %}selected{% endblock %}
 
 {% block content %}
