--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -1,4 +1,4 @@
-{% extends "base_custom_content.html" %}
+{% extends "main_custom.html" %}
 {% load paginator product_tags %}
 
 {% block menu_product %}selected{% endblock %}
