--- a/templates/product/delete.html
+++ b/templates/product/delete.html
@@ -1,12 +1,12 @@
 {% extends "base_wide.html" %}
 {% block body_class %}product{% endblock %}
 
-{% block content_header %}
+{% block header %}
 <h1>Gestion des substances</h1>
 <h2>Confirmation de suppression de substance</h2>
 {% endblock %}
 
-{% block main_content %}
+{% block content %}
     <p class="info">La suppression d'une substance est définitive et l'ensemble
     des commandes lui étant rattachées seront également supprimées.</p>
     <p>Êtes-vous sûr de vouloir supprimer cette substance ?</p>
