--- a/templates/product/form.html
+++ b/templates/product/form.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "main_classic.html" %}
 
-{% block content_header %}Nouveau produit{% endblock %}
+{% block header %}Nouveau produit{% endblock %}
 
-{% block main_content %}
+{% block content %}
 <form action="{% url product_index %}" method="post">{% csrf_token %}
     <p class="instructions">
       <em>Les champs marqués d'une étoile sont obligatoires</em>
