--- a/templates/provider/item.html
+++ b/templates/provider/item.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "main_classic.html" %}
 
-{% block content_header %}Modification d'un produit{% endblock %}
+{% block header %}Modification d'un produit{% endblock %}
 
-{% block main_content %}
+{% block content %}
 <form action="{% url provider_item provider.id %}" method="POST">{% csrf_token %}
     <input type="hidden" name="method" value="PUT" />
     <p class="instructions">
